@@ -2,6 +2,7 @@ Revision history for Perl application Wx::Demo.
 
 0.19  TBR
     - Updated for wxRibbonControl changes in Wx 0.9912
+    - Demo for wxRearrangeCtrl and friends added
 
 0.18  Fri Aug 24 2012
     - Added Wx::TreeEvent::GetKeyEvent example
